--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,68 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
-
-# Virtual Environment
-ragvenv/
-venv/
+*.pyo
+*.pyd
+.Python
 env/
+venv/
 .venv/
+ragvenv/
+*.log
+*.sqlite3
+*.db
 
 # Environment Variables
 .env
+.env.*
 
-# IDE
+# Distribution / Packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+
+# VS Code
 .vscode/
+
+# PyCharm
 .idea/
 
-# OS
-.DS_Store
+# Windows
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Project Data (likely generated/downloaded)
+# Mac
+.DS_Store
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Next.js
+.next/
+out/
+
+# Project Data
 audios/
 videos/
 jsons/
+data/
